# TwistSolver

./: README.md  TwistSolverNode.cpp  TwistSolverNode.h  pluginMain.cpp
scripts/: AEtwistSolverTemplate.mel
src/: CMakeLists.txt  TwistSolverNode.cpp  TwistSolverNode.h  pluginMain.cpp
